chore(exceptions): extract message literals to constants in service exceptions