@@ -4,7 +4,9 @@ import cl.smartlogistic.shared.exception.DomainException;
 
 /** Se lanza al intentar registrar un cliente con un RUT ya existente en el sistema. */
 public final class RutDuplicadoException extends DomainException {
+    private static final String MESSAGE = "Ya existe un cliente registrado con el RUT '%s'";
+
     public RutDuplicadoException(String rutFormateado) {
-        super("Ya existe un cliente registrado con el RUT '%s'".formatted(rutFormateado));
+        super(String.format(MESSAGE, rutFormateado));
     }
 }
